--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <marquee behavior="alternate" bgcolor="#328ba8" direction="left" height:="" 
     loop="7" scrollamount="1" scrolldelay="2" width="100%">
     <span style="font-size: 20px;color: #ffffff">
-    We are In Beta. Alpha 1.0 Coming Mid January to Early Febuary.</span></marquee>
+    We are In Beta. Full Version Coming Mid January to Early Febuary</span></marquee>
 </div>
 <footer>
-| Smorez Pics | Smorez Vids | <a href="Smorez Info.html">Smorez Info</a> | <a href="IMG_0140.jpg">Benjy The Dog</a> | <a href="IMG_0130.jpg">Holly The Dog</a> |
+| <a href="Smorez Pics.html">Smorez Pics</a> | <a href="Smorez Vids.html">Smorez Vids</a> | <a href="Smorez Info.html">Smorez Info</a> | <a href="IMG_0140.jpg">Benjy The Dog</a> | <a href="IMG_0130.jpg">Holly The Dog</a> |
 </footer>
 <body style="background-color: aqua;">
 <header>
